--- a/styles/utils/_colors.scss
+++ b/styles/utils/_colors.scss
@@ -2,4 +2,8 @@
 $primary: #272727;
 $danger: #b22e30;
 $success: #52a980;
-$misc: #33b9d4
+$misc: #33b9d4;
+
+$paper-color: #ffffff;
+$transparent: rgba(255, 255, 255, 0);
+$paper-dark: #d7d7d7;
